--- a/Example/TagListView Example/Base.lproj/Main.storyboard
+++ b/Example/TagListView Example/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Tag List View Controller-->
         <scene sceneID="0YC-zp-QY5">
             <objects>
-                <viewController id="bRF-rS-bF6" customClass="TagListViewController" customModule="Playground" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bRF-rS-bF6" customClass="TagListViewController" customModule="TagListView_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WfV-we-Q90">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -23,7 +23,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FsS-5R-Nld">
                                         <rect key="frame" x="0.0" y="0.0" width="361" height="699.33333333333337"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="340-9P-ery">
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="340-9P-ery" customClass="TagListView" customModule="TagListView">
                                                 <rect key="frame" x="0.0" y="0.0" width="361" height="300"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
@@ -119,7 +119,7 @@
                                                             <constraint firstAttribute="height" constant="24" id="mtG-dh-YaW"/>
                                                         </constraints>
                                                     </view>
-                                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K3F-4D-xDb">
+                                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="K3F-4D-xDb">
                                                         <rect key="frame" x="0.0" y="259.33333333333337" width="361" height="36"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xFo-Pf-EWg">
@@ -201,7 +201,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="9Rv-in-hzy"/>
                     <connections>
-                        <outlet property="scrollContentView" destination="340-9P-ery" id="o7U-i2-Xdr"/>
+                        <outlet property="tagListView" destination="340-9P-ery" id="3eb-II-SXz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Tb-m3-uPp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
